<resources>
    <string name="app_name">UniversityRoutePlanner</string>
    <string name="title_activity_outdoor">Map</string>
    <string name="locationOneHint">Start</string>
    <string name="locationTwoHint">Destination</string>
    <string name="directionsButton">Route</string>
    <string name="inOutButton">In/Out</string>
    <string name="accept">OK</string>
    <string name="StairText">Avoid Stairs</string>
    <string name="LiftText">Avoid Lifts</string>
</resources>
