<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="6dp">
    <AutoCompleteTextView android:id="@+id/locationOne"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/locationOneHint"
        />
    <AutoCompleteTextView android:id="@+id/locationTwo"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/locationTwoHint"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            tools:context=".StartUp.MainActivity"
            tools:layout="@layout/activity_outdoor" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Switch android:id="@+id/stairs"
                android:text="@string/StairText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"/>
            <Switch android:id="@+id/lifts"
                android:text="@string/LiftText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"/>
        </LinearLayout>
        <Button android:id="@+id/inOutButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="left|bottom"
            android:text="@string/inOutButton" />
        <Button android:id="@+id/directionsButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/directionsButton" />
    </FrameLayout>
    </LinearLayout>